<resources>
    <string name="app_name">News App</string>
    <string name="action_settings">Settings</string>

    <string name="bookmark_news">Bookmark News</string>
    <string name="global_news">Global NEWS</string>
    <string name="search_menu_title">Search</string>
    <string name="popular_news_title">Popular News</string>
    <string name="top_news_title">Top News</string>
    <string name="top_news_content">The world body chief also urged G20 countries having
        vaccinated 40 per cent of their population to actively engage in the Covax mechanism
        and the African Vaccine Acquisition Trust (AVAT).</string>
    <string name="top_news_headline">Pandemic far from over, will end when...:
        WHO chief\'s word of caution</string>

    <string name="news_to_search">News to Search</string>
    <string name="top_news_source">reuters</string>

    <string name="search_hint">Enter</string>


</resources>