<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/eight_dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/half_guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_news_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/global_news_search_margin"
            android:gravity="start"
            android:text="@string/top_news_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size24"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_top_news"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/image_placeholder"
            app:layout_constraintTop_toBottomOf="@+id/top_news_textview" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_news_headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="6"
            android:text="@string/top_news_headline"
            android:textSize="@dimen/sixteen_sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/image_top_news" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_news_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="5"
            android:text="@string/top_news_content"
            android:textSize="@dimen/fourteen_sp"
            app:layout_constraintTop_toBottomOf="@+id/top_news_headline" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/top_news_source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            android:textStyle="bold|italic"
            android:text="@string/top_news_source"
            app:layout_constraintTop_toBottomOf="@+id/top_news_content"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image_bookmarked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/sixteen_dp"
            android:src="@drawable/ic_outline_bookmark_border_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/top_news_source"
            app:layout_constraintTop_toBottomOf="@+id/top_news_content" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/half_guideline">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/popular_news_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_news_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size24"
            android:gravity="start"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/news_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/eight_dp"
            app:layout_constraintTop_toBottomOf="@+id/popular_news_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/half_guideline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>
